# SmoothstackTraining

./: README.md
Day10/: README.txt  main.cpp
Day11/: README.txt  main.cpp
Day12/: README.txt  main.cpp
Day13/: .Shapes.h.swp  .main.cpp.swp  README.txt  Shapes.h  main.cpp  main.d  virtual_ref
Day14/: README.txt  Shapes.h  main.cpp
Day15/: README.txt  main.cpp
Day16/: Numbers.h  Prompts.h  README.txt  main.cpp
Day17/: README.txt  main.cpp  virtual_ref
Day18/: MyVec.h  README.txt  main.cpp  main.d  myvec.cpp  myvec.h  virtual_ref
Day19/: .main.cpp.swp  README.txt  main.cpp  output.json  virtual_ref
Day20/: README.txt  main.cpp  output.json
Day21/: README.txt  main.cpp
Day22/: Day20.json  Day21.json  Makefile  README.txt  main.cpp  oneBarrier.json  output.json
Day23/Exchange/: Makefile  countries.h
Day24/: README.txt  ThreadSafeQueue.h  main.cpp
Day25/: main.cpp
Day25/Async/: README.txt  main.cpp
Day25/Parallel/: README.txt  main.cpp
Day26/: README.txt  main.cpp
Day27/: Makefile  README.txt  main.cpp
Day28/: Makefile  README.txt  main.cpp
Day29/: Makefile  main.cpp  virtual_ref
Exercises/AWK/: 3rows.txt  grades.txt
Exercises/AsyncAccum/: Makefile  asyncaccum.cpp
Exercises/Atomics/: a.out  atomics.cpp
Exercises/InitList/: Makefile  (+3 more)
HolidayPractice/LongMult/: BigNumber.cpp  BigNumber.h  CMakeLists.txt  LilMult.cpp  LongMult.cpp  Makefile  README.txt  testMain.cpp
Presentation/: ArchitectureSlideCSV.csv
Take-Two C++ Assignment/: README  list.cpp  main.cpp  main2.cpp  makeBothCompare.sh  removeDupes  result2.txt  testFile.txt
(+124 files in other folders)
